objects/File_Finishing__c.object
<CustomObject>
    <description>Account Specific Reporting Fields</description>
    <label>File Finishing</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>File Finishing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Finishing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>UD__c</fullName>
        <label>UD#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>File Finishing</relationshipLabel>
        <relationshipName>File_Finishing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Alpha Numeric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticketing__c</fullName>
        <label>Ticketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_Format__c</fullName>
        <label>CRS Format</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Example__c</fullName>
        <label>Data Example</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Formats__c</fullName>
        <label>Data Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drop Down</fullName>
                </value>
                <value>
                    <fullName>Text Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Identifier__c</fullName>
        <label>Key Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_or_PNR_Entry__c</fullName>
        <label>Profile or PNR Entry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>